--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   wc_form_validators: ^1.0.0
   carousel_slider: ^4.1.1
   dotted_border:
+  cloud_firestore: ^3.1.18
+  firebase_core: ^1.18.0
+
 
 dev_dependencies:
   flutter_test:
