--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,10 @@ dependencies:
   shared_preferences: ^2.0.15
   wc_form_validators: ^1.0.0
   carousel_slider: ^4.1.1
+  image_picker: ^0.8.5+3
   dotted_border:
+  url_launcher: ^6.0.17
+  country_list_pick: ^1.0.1+6
 
 dev_dependencies:
   flutter_test:
