--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   dotted_border:
   url_launcher: ^6.0.17
   country_list_pick: ^1.0.1+6
+  video_player: ^2.4.5
+  pull_to_refresh: ^2.0.0
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
